tests/baselines/reference/emitArrowFunctionWhenUsingArguments16.errors.txt
emitArrowFunctionWhenUsingArguments16.ts(2,9): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments16.ts(4,22): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
emitArrowFunctionWhenUsingArguments16.ts(6,9): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments16.ts (3 errors) ====
    function f() {
        var arguments = "hello";
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        if (Math.random()) {
            return () => arguments[0];
                         ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
        }
        var arguments = "world";
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }